配置文件,新增 运行模式 配置项

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,13 @@
 # 站点配置
 [site]
-    http_port = 8080
+    ; web 端口号
+    http_port = "8080"
+
+    ; gin 运行模式 release,debug,test
+    gin_run_mode = "release"
+
+    ; 是否记录运行日志
+    gin_write_log = "1"
 
 # 数据库配置
 [mysql]
