添加交叉编译sh脚本

--- a/config/config.ini
+++ b/config/config.ini
@@ -23,14 +23,14 @@
     driver = "cookie"
 
     ; session的生命时长 单位为秒
-    max_age = 691200
+    max_age = 31536000
     path = "/"
     http_only = "1"
     domain = ""
     secure = "0"
 
 
-# 若session驱动选为redis,配置如下选项
+# 若session驱动选为redis,请配置如下选项
 [session_driver_redis]
     ; 最大空闲连接数
     max_idel_con = "10"
