--- a/config/config.ini
+++ b/config/config.ini
@@ -36,7 +36,7 @@
     max_idel_con = "10"
     ; 连接方式 [tcp or udp]
     network = "tcp"
-    ; 连接地址
+    ; redis 连接地址
     address = "127.0.0.1:6379"
     ; redis password
     password = ""
