--- a/config/config.ini
+++ b/config/config.ini
@@ -16,6 +16,10 @@
     password = "123456"
     database = "api"
     port = "3306"
+    # 数据库连接池配置
+    max_idle_conns = "10"    # 最大空闲连接数
+    max_open_conns = "50"    # 最大打开连接数
+    conn_max_lifetime = "3600"  # 连接最大生命周期(秒)
 
 # session配置
 [session]
